--- a/orders/templates/orders/orders_dashboard.html
+++ b/orders/templates/orders/orders_dashboard.html
@@ -313,6 +313,7 @@
                     </div>
                 </div>
             </div>
+            {% if not hide_revenue %}
             <div class="col-lg-3 col-md-6 mb-3">
                 <div class="stats-card total-revenue">
                     <div class="d-flex justify-content-between align-items-center">
@@ -324,6 +325,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
         </div>
     </div>
 
