--- a/inspections/templates/inspections/dashboard.html
+++ b/inspections/templates/inspections/dashboard.html
@@ -17,7 +17,10 @@
                 {% endfor %}
             </select>
         </form>
-        <div>
+        <div class="d-flex gap-2">
+            <a href="{% url 'inspections:inspection_schedule' %}" class="btn btn-info">
+                <i class="fas fa-calendar-alt"></i> البرنامج اليومي
+            </a>
             <a href="{% url 'inspections:inspection_create' %}" class="btn btn-primary">
                 <i class="fas fa-plus"></i> معاينة جديدة
             </a>
