--- a/installations/templates/installations/modification_detail.html
+++ b/installations/templates/installations/modification_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load custom_filters %}
 
 {% block title %}تفاصيل طلب التعديل - {{ modification_request.installation.order.order_number }}{% endblock %}
 
